Final report. Also sent to Berit for publication.

--- a/frontpage.tex
+++ b/frontpage.tex
@@ -9,9 +9,9 @@
   \textbf{Title:} Basic DTU Wind Energy controller \\
   \textbf{Institute:} Department of Wind Energy \\[2em]
   \textbf{Summary (max. 2000 char.):} \\
- This report contains a description and documentation, including source code, of the basic DTU Wind Energy controller applicable for pitch-regulated, variable speed wind turbines. The controller features both partial and full load operation capabilities as well as switching mechanisms ensuring smooth switching between the two modes of operation. 
- 
-The partial and full load controllers are both based on classical proportional-integral control theory as well as additional filters such as an optional drive train damper and a notch filter mitigating the influence of rotor speed dependent variations in the feedback. The controller relies on generator speed as the primary feedback sensor. Additionally, the reference generator power is used as a feedback term to smoothen the switching between partial and full load operation. Optionally, a low-pass filtered wind speed measurement can be used for wind speed dependent minimum blade pitch in partial load operation. The controller uses the collective blade pitch angle and electromagnetic generator torque to control the wind turbine. In full load operation a feedback term from the collective blade pitch angle is used to schedule the gains of the proportional-integral controller to counter the effects of changing dynamics of the wind turbine for different wind speeds. 
+ This report contains a description and documentation, including source code, of the basic DTU Wind Energy controller applicable for pitch-regulated, variable speed wind turbines. The controller features both partial and full load operation capabilities as well as switching mechanisms ensuring smooth switching between the two modes of operation.
+
+The partial and full load controllers are both based on classical proportional-integral control theory as well as additional filters such as an optional drive train damper and a notch filter mitigating the influence of rotor speed dependent variations in the feedback. The controller relies on generator speed as the primary feedback sensor. Additionally, the reference generator power is used as a feedback term to smoothen the switching between partial and full load operation. Optionally, a low-pass filtered wind speed measurement can be used for wind speed dependent minimum blade pitch in partial load operation. The controller uses the collective blade pitch angle and electromagnetic generator torque to control the wind turbine. In full load operation a feedback term from the collective blade pitch angle is used to schedule the gains of the proportional-integral controller to counter the effects of changing dynamics of the wind turbine for different wind speeds.
 
 Blade pitch servo and generator models are not included in this controller and should be modeled separately, if they are to be included in the simulations.
 
@@ -23,15 +23,15 @@ Blade pitch servo and generator models are not included in this controller and s
   \raggedright
   \textbf{Report Number:} DTU Wind Energy E-0018  \\
   \textbf{Publication Date:} January 2013 \\[16em]
-  \textbf{Contract Number:} Light Rotor? \\[2em]
-  \textbf{Project Number:} Light Rotor? \\[2em]
+  \textbf{Contract Number:} EUDP project \emph{Light Rotor} \\[2em]
+  \textbf{Project Number:} 46-43028-Xwp3\\[2em]
   \textbf{Sponsorship:} - \\[2em]
   \textbf{ISBN:}   978-87-92896-27-8\\[2em]
   \textbf{Cover:} - \\
   \vfill
-  \textbf{Pages:} \\
-  \textbf{Tables:} \\
-  \textbf{References:} 2 \\[2em]
+  \textbf{Pages:} 42 \\
+  \textbf{Tables:} 5 \\
+  \textbf{References:} 3 \\[2em]
   Technical University of Denmark \\
   DTU Wind Energy \\
   Frederiksborgvej 399 \\
