--- a/test.tex
+++ b/test.tex
@@ -1,6 +1,6 @@
 \chapter{Simulations of DTU 10~MW RWT}
 
-Figure~\ref{f:4ms}~--~\ref{f:24ms} shows selected signals from IEC NTM simulations of the class 1A DTU 10~MW RWT at 4, 8, 12, 16, 20, and 24~m/s. All simulations are performed with HAWC2 using the controller parameters shown in the previous chapter. The plots include the transients, which for all but lowest wind speed of 4~m/s have died out before 100~s into the simulations. Comments to simulations are given in the captions.
+Figure~\ref{f:4ms}~--~\ref{f:24ms} shows selected signals from IEC NTM simulations with HAWC2 of the class 1A DTU 10~MW RWT at 4, 8, 12, 16, 20, and 24~m/s. All simulations are only meant as an example of the controller performance because they are performed using an earlier version of the DTU 10~MW RWT than the published one. The plots include the transients, which for all but lowest wind speed of 4~m/s have died out before 100~s into the simulations. Comments to simulations are given in the captions.
 
 
 \begin{figure}[t]
