--- a/description.tex
+++ b/description.tex
@@ -85,9 +85,12 @@ where $Q_A$ denotes the aerodynamic torque, $\theta$ is the collective pitch ang
 \end{equation}
 where $B$ is the number of blades, $R$ is the outer radius of the rotor, $c(r)$ is the radial chord distribution, $U(r)$ is the mean steady state relative inflow velocity along the blade, $C_L'$ and $C_D'$ are the gradients of the lift and drag coefficient curves evaluated at the mean steady state angle of attack $\alpha(r)$ along the blade, and $\varphi(r)$ is the spanwise distribution of inflow angles relative to the rotor plane.
 
-Figure~\ref{f:gainsch} shows the aerodynamic torque gradients obtained from HAWCStab2 for the DTU 10~MW RWT together with the fit of the quadratic expression \eqref{e:gainsch}. The fitted are parameters shown as inputs number 21 and 22 in Table~\ref{t:init} of Section~\ref{s:par}. Often, a linear fit is sufficient and it is assumed when the user enters $K_2=0$ (note that $K_1$ then is the angle where the aerodynamic gain is doubled).
+Figure~\ref{f:gainsch} shows the aerodynamic torque gradients obtained from HAWCStab2 for the DTU 10~MW RWT together with the fit of the quadratic expression \eqref{e:gainsch}. The fitted are parameters shown as inputs number 21 and 22 in Table~\ref{t:init} of Section~\ref{s:par}. Often, a linear fit is sufficient and it is assumed when the user enters $K_2=0$ (note that $K_1$ then is the angle where the aerodynamic gain is doubled). The gain scheduling factor based on the filtered mean pitch angle $\eta_{A,k}$ is the inverse of the expression in the parenthesis of \eqref{e:gainsch}. A nonlinear gain factor $\eta_{nl,k}$ based on the generator speed error is also added for increased sensitivity of the pitch PID controller by large speed excursions.
 
-The gain scheduling factor based on the filtered mean pitch angle $\eta{A,k}$ is the inverse of the expression in the parenthesis of \eqref{e:gainsch}. A nonlinear gain factor $\eta_{nl,k}$ based on the generator speed error is also added for increased sensitivity of the pitch PID controller by large speed excursions.
+\begin{figure}[b!]
+\centerline{\epsfig{figure=gainsch.eps,width=1\textwidth} }
+\caption{Aerodynamic torque gains for the DTU 10~MW RWT obtained from HAWCStab2. \label{f:gainsch}}
+\end{figure}
 
 \subsection{Switching between partial and full load operation}
 
@@ -101,7 +104,7 @@ The measured generator LSS speed $\Omega_k$ is fed through a band-pass filter wi
 
 All parameters of the controller are transferred to the DLL using HAWC2 commands for the ``init'' routine of the type2 DLL \cite{Larsen12}. Table~\ref{t:init} shows the command list from the input to the DTU 10MW RWT, and some more details of all 38 parameters are given in Table~\ref{t:par}, where the notation of the parameters used in the diagram of Figure~\ref{f:diagram} and some additional notations can also be seen.
 
-\begin{table}[b]
+\begin{table}[t!]
 \begin{center}
 \scriptsize
 \begin{verbatim}
@@ -111,28 +114,28 @@ constant   2   0.733  ; Minimum rotor speed [rad/s]
 constant   3   1.005  ; Rated rotor speed [rad/s]
 constant   4  15.6e6  ; Maximum allowable generator torque [Nm]
 constant   5 100.0    ; Minimum pitch angle, theta_min [deg],
-                      ; if |theta_min|>90, then a table of <wsp,theta_min> is read
+                      ; if |theta_min|>90, then a table of <wsp,theta_min> is read ;
                       ; from a file named 'wptable.n', where n=int(theta_min)
 constant   6  90.0    ; Maximum pitch angle [deg]
 constant   7  10.0    ; Maximum pitch velocity operation [deg/s]
-constant   8   0.15   ; Frequency of generator speed filter [Hz]
+constant   8   0.2    ; Frequency of generator speed filter [Hz]
 constant   9   0.7    ; Damping ratio of speed filter [-]
-constant  10   0.625  ; Frequency of free-free DT torsion mode [Hz], if zero no notch filter used
+constant  10   0.64   ; Frequency of free-free DT torsion mode [Hz], if zero no notch filter used
 ; Partial load control parameters
-constant  11   9.54e6 ; Optimal Cp tracking K factor [kNm/(rad/s)^2], ;
+constant  11   9.5e6  ; Optimal Cp tracking K factor [kNm/(rad/s)^2], ;
                       ; Qg=K*Omega^2, K=eta*0.5*rho*A*Cp_opt*R^3/lambda_opt^3
-constant  12   6.98e7 ; Proportional gain of torque controller [Nm/(rad/s)]
-constant  13   1.46e7 ; Integral gain of torque controller [Nm/rad]
+constant  12   7.33e7 ; Proportional gain of torque controller [Nm/(rad/s)]
+constant  13   1.32e7 ; Integral gain of torque controller [Nm/rad]
 constant  14   0.0    ; Differential gain of torque controller [Nm/(rad/s^2)]
 ; Full load control parameters
 constant  15   1      ; Generator control switch [1=constant power, 2=constant torque]
-constant  16   1.142  ; Proportional gain of pitch controller [rad/(rad/s)]
-constant  17   0.1509 ; Integral gain of pitch controller [rad/rad]
+constant  16   0.592  ; Proportional gain of pitch controller [rad/(rad/s)]
+constant  17   0.133  ; Integral gain of pitch controller [rad/rad]
 constant  18   0.0    ; Differential gain of pitch controller [rad/(rad/s^2)]
 constant  19   0.4e-8 ; Proportional power error gain [rad/W]
 constant  20   0.4e-8 ; Integral power error gain [rad/(Ws)]
-constant  21   7.5    ; Coefficient of linear term in aerodynamic gain scheduling, KK1 [deg]
-constant  22 708.1    ; Coefficient of quadratic term in aerodynamic gain scheduling, KK2 [deg^2]
+constant  21 164.13   ; Coefficient of linear term in aerodynamic gain scheduling, KK1 [deg]
+constant  22 702.09   ; Coefficient of quadratic term in aerodynamic gain scheduling, KK2 [deg^2] &
                       ; (if zero, KK1 = pitch angle at double gain)
 constant  23   1.3    ; Relative speed for double nonlinear gain [-]
 ; Cut-in simulation parameters
@@ -148,18 +151,18 @@ constant  31   1.0    ; Time delay for pitch stop 2 [s]
 constant  32  10.0    ; Maximum pitch velocity during stop 2 [deg/s]
 ; Expert parameters (keep default values unless otherwise given)
 constant  33   0.5    ; Lower angle above lowest minimum pitch angle for switch [deg]
-constant  34   0.5    ; Upper angle above lowest minimum pitch angle for switch [deg]
-constant  35  95.0    ; Ratio between filtered and reference speed for fully open torque limits [%]
-constant  36   5.0    ; Time constant of 1st order filter on wind speed for minimum pitch [1/1P]
-constant  37   5.0    ; Time constant of 1st order filter on pitch angle for gain scheduling [1/1P]
+constant  34   0.5    ; Upper angle above lowest minimum pitch angle for switch [deg], if equal then hard switch
+constant  35  95.0    ; Ratio between filtered speed and reference speed for fully open torque limits [%]
+constant  36   5.0    ; Time constant of 1st order filter on wind speed used for minimum pitch [1/1P]
+constant  37   5.0    ; Time constant of 1st order filter on pitch angle used for gain scheduling [1/1P]
 ; Drivetrain damper
-constant  38   0.0    ; Proportional gain of DT damper [Nm/(rad/s)], requires frequency in input 10
+constant  38   0.0  ; Proportional gain of active DT damper [Nm/(rad/s)], requires frequency in input 10
 \end{verbatim}
 \caption{All parameters of the controller, here shown as the HAWC2 input commands for the ``init'' routine of the controller, see type2 DLL interface description in the HAWC2 manual. The shown values are taken from the input to the DTU 10MW RWT. \label{t:init}}
 \end{center}
 \end{table}
 
-\begin{table}[b]
+\begin{table}[p]
 \begin{center}
 \begin{tabular}{r|c|p{11.5cm}}
 Input &  & Additional explanation if assumed needed \\ \hline
@@ -198,7 +201,7 @@ Input &  & Additional explanation if assumed needed \\ \hline
 \end{tabular}
 \end{center}
 \end{table}
-\begin{table}[b]
+\begin{table}[t!]
 \begin{center}
 \begin{tabular}{r|c|p{11.5cm}}
 Input &  & Additional explanation if assumed needed \\ \hline
@@ -213,7 +216,7 @@ Input &  & Additional explanation if assumed needed \\ \hline
 \end{center}
 \end{table}
 
-\begin{table}[b]
+\begin{table}[t]
 \begin{center}
 \begin{verbatim}
 7
@@ -229,13 +232,11 @@ Input &  & Additional explanation if assumed needed \\ \hline
 \end{center}
 \end{table}
 
-\clearpage
-
 \section{Inputs and outputs}
 
 As input during simulations, the controller requires the time [s], the generator LSS speed [rad/s], the pitch angles of three blades [rad], and the three components of the wind speed at hub height [m/s], where the first and second of these three components must be the two horizontal components that are used internally to compute the horizontal vector sum. Table~\ref{t:input} shows the HAWC2 commands that provide these eight controller inputs for the DTU 10~MW RWT. Note that if the rotor only has two blades, then the controller may still be used by repeating a blade pitch angle output to the controller. However, this trick is only valid if there is no additional cycle, or individual pitch controller appended to this controller.
 
-\begin{table}[b]
+\begin{table}[t]
 \center
 \begin{verbatim}
 general time                           ; [s]
@@ -248,9 +249,9 @@ wind free_wind 1 0.0 0.0 -124.6        ; [m/s] global coords at hub height
 \caption{HAWC2 commands that define the input to the controller DLL. Note that the command ``wind free\_wind 1 x y z'' will give all three components of the free wind at the point x,y,z, both in global coordinates \cite{Larsen12}, thus in all eight inputs. \label{t:input}}
 \end{table}
 
-Table~\ref{t:output} contains a list of the controller outputs to the simulation, where the generator torque reference and pitch angle references for three blades are the 
+Table~\ref{t:output} contains a list of the controller outputs to the simulation, where the generator torque reference and pitch angle references for three blades are the
 
-\begin{table}[b]
+\begin{table}[t]
 \center
 \begin{tabular}{r|ll}
 Channel & Description \\ \hline
