Started merging the reports but far from finished.

--- a/appendix.tex
+++ b/appendix.tex
@@ -978,6 +978,6 @@ Test and validation of these second order filters are shown in Figures~\ref{f:f2
 \end{figure}
 
 \begin{figure}[t]
-\centerline{\epsfig{figure=fn.eps,width=0.95\textwidth} }
+\centerline{\epsfig{figure=fp.eps,width=0.95\textwidth} }
 \caption{Test of the second order band-pass filter function \eqref{e:fp} with a frequency of $\omega=0.625$~Hz and a time step of $\Delta t = 0.04$~s. \label{f:fp}}
 \end{figure}
