--- a/report.tex
+++ b/report.tex
@@ -17,9 +17,10 @@ open=any             % New chapter may begin on any page
 \usepackage{epsfig}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{graphicx}
 %\usepackage{draftwatermark}
 %\SetWatermarkScale{2}
-\usepackage{siunitx}
+%\usepackage{siunitx}
 \usepackage{url}
 \urlstyle{sf}
 \usepackage{rotating}
