report: updated polots of torque limits

--- a/description.tex
+++ b/description.tex
@@ -169,6 +169,11 @@ The exclusion zone functionality avoids resonant conditions between the 3P excit
 \caption{Exclusion zone torque curve. \label{f:EZ_torque}}
 \end{figure}
 
+\begin{figure}[t]
+\centerline{
+\includegraphics[width=0.6\textwidth]{torque_limits_rsa_exclusionzone.eps} }
+\caption{Torque limits in partial load operation of the DTU 10~MW RWT when the rotor speed exclusion zone is active. \label{f:EZ_torque_limits}}
+\end{figure}
 
 
 
