--- a/ref.bib
+++ b/ref.bib
@@ -42,3 +42,16 @@
 	year = {2014},
 	file = {AIAA Full Text PDF:C\:\\Users\\tlbl\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\ag0fi3fp.default\\zotero\\storage\\4I75Z23V\\Tibaldi et al. - Effects of gain-scheduling methods in a classical .pdf:application/pdf;AIAA Snapshot:C\:\\Users\\tlbl\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\ag0fi3fp.default\\zotero\\storage\\M6PP3K7P\\6.html:text/html}
 }
+
+@TECHREPORT{Hansen13,
+  author = {M. H. Hansen and L. C. Henrisksen},
+  title = {Basic DTU Wind Energy Controller},
+  institution = {Technical University of Denmark},
+  year = {2013},
+  number = {E-0028},
+  address = {Roskilde, Denmark},
+  note = {DTU Wind Energy report E-0028},
+  owner = {mhha},
+  timestamp = {2013.01.13}
+}
+
