--- a/report.tex
+++ b/report.tex
@@ -31,7 +31,7 @@ open=any             % New chapter may begin on any page
 \pagestyle{scrheadings}
 \manualmark
 \graphicspath{{./figure/}}
-\ifoot[DTU Wind Energy E-0018]{DTU Wind Energy E-0018}
+\ifoot[DTU Wind Energy E-XXXX]{DTU Wind Energy E-XXXX}
 
 % Counters
 \usepackage{totcount}
