--- a/frontpage.tex
+++ b/frontpage.tex
@@ -5,16 +5,11 @@
 %
 \begin{minipage}[t][22cm][t]{9cm}
   \raggedright
-  \textbf{Author(s):} Morten Hartvig Hansen, Lars Christian Henriksen, Tomas Hanis, and Carlo Tibaldi\\
-  \textbf{Title:} Basic DTU Wind Energy controller \\
+  \textbf{Author(s):} Mahmood Mirzaei, Morten Hartvig Hansen, Carlo Tibaldi, Lars Christian Henriksen, Tomas Hanis\\
+  \textbf{Title:} Basic DTU Wind Energy controller - ver. 02\\
   \textbf{Institute:} Department of Wind Energy \\[2em]
-  \textbf{Summary (max. 2000 char.):} \\
- This report contains a description and documentation of the basic DTU Wind Energy controller applicable for pitch-regulated, variable speed wind turbines. The controller features both partial and full load operation capabilities as well as switching mechanisms ensuring smooth transition between the two modes of operation.
-
-The partial and full load controllers are both based on classical proportional-integral control theory as well as on additional features such as a drivetrain and tower damper, a rotor speed exclusion zone, and a notch filter mitigating the influence of rotor speed dependent variations in the feedback. The controller relies on generator speed as the primary feedback sensor. Additionally, the reference generator power is used as a feedback term to smoothen the switching between partial and full load operation. Optionally, a low-pass filtered wind speed measurement can be used for wind speed dependent minimum blade pitch in partial load operation. The controller uses the collective blade pitch angle and electromagnetic generator torque to control the wind turbine. In full load operation a feedback term from the collective blade pitch angle is used to schedule the gains of the proportional-integral controller to counter the effects of changing dynamics of the wind turbine for different wind speeds.
-
-Blade pitch servo and generator models are not included in this controller and should be modeled separately, if they are to be included in the simulations.
-
+  \textbf{Summary:} \\
+This report contains a description and documentation of the basic DTU Wind Energy controller applicable for pitch-regulated, variable speed wind turbines. The controller features both partial and full load operation capabilities as well as switching mechanisms ensuring smooth transition between the two modes of operation. The partial and full load controllers are both based on classical proportional-integral control theory as well as on additional features such as drivetrain and tower dampers, a rotor speed exclusion zone, and different curtailment features. The controller relies on generator speed as the primary feedback sensor. Additionally, the actual generator power is used as a feedback term to smoothen the switching between partial and full load operation. Optionally, a low-pass filtered wind speed measurement can be used for wind speed dependent minimum blade pitch in partial load operation. The controller uses the collective blade pitch angle and electromagnetic generator torque to control the wind turbine. In full load operation a feedback term from the collective blade pitch angle is used to schedule the gains of the proportional-integral controller to counter the effects of changing dynamics of the wind turbine for different wind speeds. Modelling of the blade pitch actuators and the converter-generator system are not included in the controller and must be modelled separately, if they are to be included in the simulations.
 \end{minipage}
 %
 \hspace{5mm} &
